# siteadaptor-platform

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
caddy/: Caddyfile  Dockerfile
config/: asgi.py  celery.py  rosetta_access.py  urls_portal.py  urls_public.py  urls_tenant.py
docs/: DEVELOPMENT-GUIDE.md  SESSION-HANDOFF.md  a4-booking-widget-plan.md  admin-global-audit-2026-07-09.md  admin-simplification-analysis-2026-07-08.md  admin-simplification-exec-plan-2026-07-08.md  admin-simplification-handoff-2026-07-08.md  admin-simplification-s6-plan-2026-07-09.md  anti-bitrix-admin-plan.md  archetype-behavior-specs-2026-07-23.md  archetype-completeness-audit-2026-06-30.md  archetype-entities-plan.md  archetype-first-screen-concept-2026-07-23.md  archetype-first-screen-execution-2026-07-23.md  archetype-market-analysis.md  archetype-ux-execution-plan.md  audit-2026-06-22.md  audit-2026-07-01.md  b1-gift-vouchers-plan-2026-07-03.md  b2-payment-reminder-plan-2026-07-03.md  b4-cm9-campaigns-plan-2026-07-03.md  billing-stripe-setup.md  build-log.md  cabinet-feedback-tz-2026-07-10.md  cm1-blog-first-class-plan-2026-07-03.md  cm2-content-calendar-plan-2026-07-03.md  cm4-media-library-plan-2026-07-03.md  cm6-reputation-plan-2026-07-03.md  cm8-customer360-plan-2026-07-03.md  d2-featured-plan-2026-07-03.md  d3-partner-plan-2026-07-03.md  demo-kits-per-type-plan-2026-07-10.md  demo-new-ideology-plan-2026-07-19.md  demo-photos-shopping-list-2026-07-10.md  demo-test-guide-2026-07-19.md  dsgvo-review.md  e7-payments-plan-2026-07-02.md  editor-live-inplace-plan-2026-07-12.md  editor-right-inspector-plan-2026-07-13.md  editor-ux-v2-plan-2026-07-06.md  (+108 more)
(+1365 files in other folders)
