[project]
name = "platform"
version = "0.1.0"
description = "Multi-tenant SaaS platform for small offline businesses (DACH)"
requires-python = ">=3.12"

dependencies = [
    # Core
    "django>=5.1,<5.2",
    "django-tenants>=3.7",
    "psycopg[binary]>=3.2",
    "django-environ>=0.11",

    # Auth
    "django-allauth[socialaccount]>=65.0",

    # Async / tasks
    "celery[redis]>=5.4",
    "django-celery-beat>=2.7",
    "django-celery-results>=2.5",
    "redis>=5.0",

    # Admin & UI
    "django-unfold>=0.42",
    "django-htmx>=1.19",
    "django-widget-tweaks>=1.5",

    # Files & storage
    "django-storages[s3]>=1.14",
    "pillow>=10.4",

    # Email
    "django-anymail[resend]>=12.0",

    # Payments
    "dj-stripe>=2.9",

    # Import/export
    "django-import-export>=4.2",
    "openpyxl>=3.1",

    # API (для будущего)
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.4",

    # Server
    "gunicorn>=23.0",
    "whitenoise>=6.7",

    # Monitoring
    "sentry-sdk>=2.15",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4",
    "django-extensions>=3.2",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "faker>=30.0",
    "ruff>=0.7",
    "ipython>=8.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "-ra --strict-markers"
